Bug 92324 - printing of labels (Next dataset fields) via file->print is broken
Summary: printing of labels (Next dataset fields) via file->print is broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.0.0.1 rc
Hardware: Other All
: medium normal
Assignee: Vasily Melenchuk (CIB)
URL:
Whiteboard: target:5.1.0 target:5.0.2
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-25 07:56 UTC by Christoph Lutz
Modified: 2016-10-25 19:24 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
labeltest.odt is a simple document with dataset and next-dataset fields in some paragraphs (9.09 KB, application/vnd.oasis.opendocument.text)
2015-06-25 07:56 UTC, Christoph Lutz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Christoph Lutz 2015-06-25 07:56:58 UTC
Created attachment 116816 [details]
labeltest.odt is a simple document with dataset and next-dataset fields in some paragraphs

In LO 5.0 (Build-ID: 54e470685337c8c231b80ca9e95c11f9babf25c7) on linux I recognized that printing of labels (documents with next dataset fields) seems to be broken.

1) open the attached file labeltest.odt. (a simple document that just contains a "database"-field and a "next dataset"-field on some paragraphs)

2) do file->print, confirm "print as serial letter?"-dialog with "Yes"

3) select print to printer (if not already chosen)

4) press OK --> now there are two dialogs shown "luXXX..." (progress dialog) and the printer dialog. The preview window in the printer dialog shows some reasonable content.

5) First strange thing I noticed: If I now switch between different printers in the printers list, the preview gets empty.

6) select a printer (I use PDF-Printer on my linux system) and print (press "OK") --> the result is an empty page. I would expext a page with content.
Comment 1 Buovjaga 2015-06-30 16:58:03 UTC
Switching between printers does not make the preview empty and the printed PDF has the contents ok.

Does this occur with 5.0 RC2, too? (I installed it using SI-GUI, but wouldn't run because of missing dll..)

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+
Build ID: 4fff776a08dd92121ab507a1ab506ac945abaedb
TinderBox: Win-x86@62-merge-TDF, Branch:MASTER, Time: 2015-06-28_00:25:54
Locale: fi-FI (fi_FI)
Comment 2 Christoph Lutz 2015-08-07 14:13:42 UTC
I assume that this is related to the cups printing backend.

I can still reproduce this bug on linux with the current libreoffice-5-0 (89d8ad07c) branch as described in my initial description.
Comment 3 Vasily Melenchuk (CIB) 2015-08-13 07:55:44 UTC
Bug was reproduced successfully only on Linux. No problems in Windows.

Version: 5.1.0.0.alpha1+
Build ID: 71aed9185fb17ee27bdc38b4ac650713c4cabb8b
Locale: en-US (en_US.UTF-8)
Comment 4 Commit Notification 2015-08-20 12:18:12 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=959a5043ccb4bb027e0149a56d31ebb78d5eb862

tdf#92324 Fixed MailMerge printing with values from database

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Vasily Melenchuk (CIB) 2015-08-20 12:43:50 UTC
Bug is no longer reproducible.
Comment 6 Commit Notification 2015-08-20 15:38:55 UTC
Vasily Melenchuk committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d0bafebbcd4a301bcca6fb74627820b251f6dce5&h=libreoffice-5-0

tdf#92324 Fixed MailMerge printing with values from database

It will be available in 5.0.2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.