tdf#92324 Fixed MailMerge printing with values from database

Locking of ExpFields is required to lock current state of fields and database cursor:
generation of print preview and some other operations can cause changing
of current database record, especially if document contains nextrecord fields.

Change-Id: If0466ef2489d96264380b5978ef7d7cf3f545c23
Reviewed-on: https://gerrit.libreoffice.org/17857
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Thorsten Behrens <Thorsten.Behrens@CIB.de>
Reviewed-by: Michael Stahl <mstahl@redhat.com>